--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 body {
 background-color: rgb(203, 203, 203) ;
-background-image: linear-gradient( rgb(255, 200, 118),rgb(255, 249, 246));
+background-image: linear-gradient( rgb(255, 188, 87),rgb(255, 249, 246));
 align-content: center;
 margin: 12px;
 text-align: center;
@@ -23,6 +23,21 @@ position:relative;
     border-color: black;
     border-style: groove;
 }
+
+.mainBody2{
+    animation-name: third;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    padding-left: 12px; 
+    padding-right:12px; 
+    font-size: 18px; 
+    border:solid; 
+    border-radius: 10px; 
+    border-width:10px ; 
+    border-color: black;
+    border-style: groove;
+}
+
 header {
     padding:12px;
     border-radius: 24px;
@@ -47,6 +62,12 @@ color:white;
     0% {box-shadow: 0px 0px 5px 5px rgb(128, 217, 255);}
     50% {box-shadow:0px 0px 30px 20px rgb(80, 232, 246);}
     100% {box-shadow:0px 0px 5px 5px rgb(128, 217, 255);}
+}
+
+@keyframes third {
+    0% {box-shadow: 0px 0px 5px 5px rgb(128, 153, 255) inset;}
+    50% {box-shadow:0px 0px 15px 10px rgb(92, 63, 255) inset;}
+    100% {box-shadow:0px 0px 5px 5px rgb(128, 153, 255) inset;}   
 }
 
 .resumer {
@@ -111,14 +132,14 @@ td{
 
 .fancy{
     border-style: ridge;
-    border-color:aqua;
+    border-color:rgb(0, 110, 255);
     border-spacing: 2px;
     border-style: dashed;
     padding: 4px;
     border-radius: 20px;
     margin:auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     max-width: 200px;
 }
 
